T-13056 theme: Fixed issue where empty dd causes alignment issues
Reviewed-on: https://review.totaralms.com/5971
Tested-by: Jenkins Automation <jenkins@totaralms.com>

--- a/theme/bootstrapbase/less/moodle/core.less
+++ b/theme/bootstrapbase/less/moodle/core.less
@@ -2207,3 +2207,12 @@ body.lockscroll {
         margin-right: 25px;
     }
 }
+
+dd:before,
+dd:after {
+  display: block;
+  content: " ";
+}
+dd:after {
+  clear: both;
+}
